# coleman4hcs

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MIGRATION_EXAMPLES.md  MIGRATION_PLAN_PANDAS_TO_POLARS.md  MIGRATION_README.md  MIGRATION_SUMMARY.md  Makefile  POLARS_MIGRATION_COMPLETED.md  POLARS_QUICK_REFERENCE.md  README.md  SECURITY.md  analysis.ipynb  config.toml  main.py  main_analysis.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  run.yaml  sonar-project.properties  zensical.toml
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  pandas-to-polars-migration.md
.github/workflows/: code-cost.yml  codecov.yml  docs.yml  pr-labeler.yml  pylint.yml  release.yml
coleman/: __init__.py  api.py  cli.py  environment.py  environment_base.py  exceptions.py  runner.py
coleman/agent/: __init__.py  base.py  contextual.py  reward_agent.py  schemas.py  sliding_window.py
coleman/bandit/: __init__.py  base.py  dynamic.py  metric_bandit.py
coleman/checkpoint/: __init__.py  checkpoint_store.py  state.py
coleman/evaluation/: __init__.py  base.py  napfd.py
coleman/policy/: __init__.py  base.py
coleman/policy/contextual/: linucb.py
coleman/policy/greedy/: __init__.py  epsilon_greedy.py
coleman/policy/mab/: frrmab.py  slmab.py
coleman/policy/random/: __init__.py  random_policy.py
coleman/policy/ucb/: __init__.py  policies.py
coleman/results/: __init__.py  clickhouse_sink.py  duckdb_catalog.py  parquet_sink.py  sink_base.py  writer.py
coleman/reward/: base.py  rnfail.py  timerank.py
coleman/scenarios/: __init__.py
coleman/scenarios/loaders/: __init__.py  loaders.py
coleman/scenarios/providers/: __init__.py  dataset_providers.py
coleman/scenarios/virtual/: __init__.py  scenarios.py
coleman/spec/: __init__.py  io.py  models.py  provenance.py  run_id.py  sweep.py
coleman/statistics/: __init__.py  vargha_delaney.py
coleman/telemetry/: __init__.py  otel.py  resources.py
coleman/utils/: __init__.py  monitor.py  monitor_params.py
coleman4hcs/: __init__.py  agent.py  api.py  bandit.py  cli.py  environment.py  environment_base.py  evaluation.py  exceptions.py  policy.py  reward.py  runner.py  scenarios.py
coleman4hcs/agent/: __init__.py  base.py  contextual.py  reward_agent.py  sliding_window.py
coleman4hcs/bandit/: __init__.py  base.py  metric_bandit.py
coleman4hcs/checkpoint/: __init__.py  checkpoint_store.py  state.py
coleman4hcs/evaluation/: __init__.py  base.py
coleman4hcs/policy/: __init__.py  base.py  epsilon_greedy.py  frrmab.py  linucb.py  slmab.py  ucb.py
coleman4hcs/policy/contextual/: __init__.py  linucb.py
coleman4hcs/policy/greedy/: __init__.py  epsilon_greedy.py
coleman4hcs/policy/mab/: __init__.py  frrmab.py  slmab.py
coleman4hcs/policy/random/: random_policy.py
coleman4hcs/policy/ucb/: policies.py
coleman4hcs/results/: __init__.py  clickhouse_sink.py  duckdb_catalog.py  parquet_sink.py  sink_base.py  writer.py
coleman4hcs/reward/: __init__.py  base.py  rnfail.py  timerank.py
coleman4hcs/scenarios/: __init__.py  providers.py
coleman4hcs/scenarios/providers/: dataset_providers.py
coleman4hcs/scenarios/virtual/: scenarios.py
coleman4hcs/spec/: __init__.py  io.py  models.py  packs.py  run_id.py  sweep.py
coleman4hcs/statistics/: __init__.py  analysis.py  vargha_delaney.py
coleman4hcs/telemetry/: __init__.py  otel.py  resources.py
coleman4hcs/test/: evaluation_test.py  policy_test.py
coleman4hcs/tests/: evaluation_test.py  policy_test.py  test_agent.py  test_bandit.py  test_evaluation.py  test_reward.py
coleman4hcs/tests/statistics/: test_varga_delaney.py
coleman4hcs/tests/utils/: test_monitor.py
coleman4hcs/utils/: __init__.py  monitor.py  monitor_params.py
config/: config.py
docs/: api-reference.md  code-cost.md  configuration.md  getting-started.md  index.md  observability.md  setup.md  workflow.md  workflow.py
docs/api/: agent.md  bandit.md  cli.md  environment.md  evaluation.md  experiment-api.md  policy.md  reward.md  scenarios.md  spec-io.md  spec-models.md  spec-packs.md  spec-provenance.md  spec-run-id.md  spec-sweep.md
examples/alibaba@druid/: features-engineered-contextual.parquet  features-engineered.parquet
examples/core@dune-common/dune@debian_10 clang-7-libcpp-17/: features-engineered.parquet
examples/core@dune-common/dune@debian_11 gcc-10-20/: features-engineered.csv  features-engineered.parquet
examples/core@dune-common/dune@total/: data-variants.parquet  features-engineered.parquet
examples/fakedata/: features-engineered.csv  features-engineered.parquet
examples/observability/: README.md  docker-compose.yaml  otel-collector-config-clickhouse.yaml  otel-collector-config.yaml  prometheus.yml
examples/square@retrofit/: features-engineered-contextual.parquet  features-engineered.parquet
notebooks/: analysis.ipynb  analysis.py  workflow.py
packs/algorithm/: defaults.yaml
packs/checkpoint/: default.yaml
packs/contextual/: default.yaml
packs/execution/: default.yaml
packs/experiment/: alibaba_druid.yaml
packs/hcs/: off.yaml
packs/policy/: linucb.yaml
packs/results/: parquet.yaml
packs/reward/: rnfail.yaml
packs/runtime/: local.yaml
packs/telemetry/: local.yaml
scripts/: measure_energy.py
tests/: test_agent.py  test_bandit.py  test_environment.py  test_evaluation.py  test_exceptions.py  test_integration_flow.py  test_main.py  test_namespace_alias.py  test_policy.py  test_reward.py  test_scenarios.py
tests/checkpoint/: test_checkpoint.py
tests/results/: test_clickhouse_sink.py  test_results.py
tests/spec/: test_api.py  test_cli.py  test_io.py  test_models.py  test_packs.py  test_provenance.py  test_run_id.py  test_sweep.py
tests/statistics/: test_varga_delaney.py
tests/telemetry/: test_resources.py  test_telemetry.py
tests/utils/: test_monitor.py
(+5 files in other folders)
