[project]
name = "coleman4hcs"
version = "1.2.0"
description = "Multi-Armed Bandit based test case prioritization for continuous integration environments"
license = "MIT"
authors = [{ name = "Jackson Antonio do Prado Lima", email = "jacksonpradolima@gmail.com" }]
requires-python = ">=3.14"
readme = "README.md"
dependencies = [
    "duckdb",
    "numpy",
    "polars",
    "pyarrow",
    "scipy",
    "scikit-posthocs",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "ty",
    "pre-commit",
    "interrogate",
    "numpydoc",
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-mock",
    "pytest-profiling",
    "pytest-xdist",
]
docs = [
    "zensical",
    "mkdocstrings[python]",
    "mkdocs-jupyter",
]
release = [
    "python-semantic-release",
]
notebook = [
    "marimo",
    "matplotlib",
    "pandas",
    "seaborn",
]
telemetry = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-http",
]
clickhouse = [
    "clickhouse-connect",
]

[project.scripts]
coleman = "coleman4hcs.cli:main"

[project.urls]
homepage = "https://github.com/jacksonpradolima/coleman4hcs"
repository = "https://github.com/jacksonpradolima/coleman4hcs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N", "D"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D100", "D101", "D102", "D103", "D104", "D107", "D200", "D205", "D400", "D401"]
"notebooks/**" = ["D", "E501", "F821", "F841", "B023", "B905", "N", "UP", "SIM", "W"]
"coleman4hcs/exceptions.py" = ["N818"]
"examples/**" = ["D", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
markers = [
    "performance: Mark a test as a performance benchmark.",
]

[tool.interrogate]
ignore-init-module = true
fail-under = 80

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_message = "chore(release): {version}"
build_command = "uv build"
